// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Detail view detail view 1`] = `
<div
  className="ui compact inverted padded segment"
>
  <code>
    <pre>
      headers
    </pre>
  </code>
  <div
    className="payload"
  >
    <code>
      <pre>
        {"foo": "bar"}
      </pre>
    </code>
  </div>
</div>
`;

exports[`Storyshots ToolBar tool bar 1`] = `
<div
  className="logs-console-toolbar"
>
  <div
    className="ui inverted menu"
  >
    <a
      className="item"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="ban icon"
      />
    </a>
    <div
      aria-expanded={false}
      className="ui item dropdown filter-message.id pull-right"
      inverted={true}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-live="polite"
        className="text"
        role="alert"
      >
        Activity Id: all
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="menu transition"
      >
        <div
          aria-checked={true}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            All
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            id4
          </span>
        </div>
      </div>
    </div>
    <div
      aria-expanded={false}
      className="ui item dropdown filter-logger pull-right"
      inverted={true}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-live="polite"
        className="text"
        role="alert"
      >
        Logger: all
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="menu transition"
      >
        <div
          aria-checked={true}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            All
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            http.tracelog.downstream
          </span>
        </div>
      </div>
    </div>
    <div
      aria-expanded={false}
      className="ui item dropdown filter-message.path pull-right"
      inverted={true}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-live="polite"
        className="text"
        role="alert"
      >
        Path: all
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="menu transition"
      >
        <div
          aria-checked={true}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            All
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            /path4
          </span>
        </div>
      </div>
    </div>
    <div
      aria-expanded={false}
      className="ui item dropdown filter-message.direction pull-right"
      inverted={true}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-live="polite"
        className="text"
        role="alert"
      >
        Inbound/Outbound: all
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="menu transition"
      >
        <div
          aria-checked={true}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            All
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            direction
          </span>
        </div>
      </div>
    </div>
    <div
      aria-expanded={false}
      className="ui item dropdown filter-message.httpMethod pull-right"
      inverted={true}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-live="polite"
        className="text"
        role="alert"
      >
        Method: all
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="menu transition"
      >
        <div
          aria-checked={true}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            All
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            POST
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots trace list list traces 1`] = `
<div
  id="logs-console"
>
  <table
    className="ui celled inverted striped unstackable compact table"
  >
    <thead
      className=""
    >
      <tr
        className=""
      >
        <th
          className=""
        />
        <th
          className="method"
        >
          Method
        </th>
        <th
          className=""
        >
          Path
        </th>
        <th
          className=""
        >
          Direction
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className="clickable"
        onClick={[Function]}
      >
        <td
          className="direction-icon"
        >
          <i
            aria-hidden="true"
            className="icon"
            title="http.tracelog.downstream - direction"
          />
        </td>
        <td
          className="method"
        >
          <div
            className="ui horizontal label get"
            onClick={[Function]}
          >
            GET
          </div>
        </td>
        <td
          className="path"
        >
          /path
        </td>
        <td
          className="direction"
        >
          direction
        </td>
      </tr>
      <tr
        className="clickable"
        onClick={[Function]}
      >
        <td
          className="direction-icon"
        >
          <i
            aria-hidden="true"
            className="icon"
            title="http.tracelog.downstream - direction"
          />
        </td>
        <td
          className="method"
        >
          <div
            className="ui horizontal label post"
            onClick={[Function]}
          >
            POST
          </div>
        </td>
        <td
          className="path"
        >
          /path2
        </td>
        <td
          className="direction"
        >
          direction
        </td>
      </tr>
      <tr
        className="clickable"
        onClick={[Function]}
      >
        <td
          className="direction-icon"
        >
          <i
            aria-hidden="true"
            className="icon"
            title="http.tracelog.downstream - direction"
          />
        </td>
        <td
          className="method"
        >
          <div
            className="ui horizontal label post"
            onClick={[Function]}
          >
            POST
          </div>
        </td>
        <td
          className="path"
        >
          /path3
        </td>
        <td
          className="direction"
        >
          direction
        </td>
      </tr>
      <tr
        className="clickable"
        onClick={[Function]}
      >
        <td
          className="direction-icon"
        >
          <i
            aria-hidden="true"
            className="icon"
            title="http.tracelog.downstream - direction"
          />
        </td>
        <td
          className="method"
        >
          <div
            className="ui horizontal label post"
            onClick={[Function]}
          >
            POST
          </div>
        </td>
        <td
          className="path"
        >
          /path4
        </td>
        <td
          className="direction"
        >
          direction
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots trace list list traces selected 1`] = `
<div
  id="logs-console"
>
  <table
    className="ui celled inverted striped unstackable compact table"
  >
    <thead
      className=""
    >
      <tr
        className=""
      >
        <th
          className=""
        />
        <th
          className="method"
        >
          Method
        </th>
        <th
          className=""
        >
          Path
        </th>
        <th
          className=""
        >
          Direction
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className="clickable"
        onClick={[Function]}
      >
        <td
          className="direction-icon"
        >
          <i
            aria-hidden="true"
            className="icon"
            title="http.tracelog.downstream - direction"
          />
        </td>
        <td
          className="method"
        >
          <div
            className="ui horizontal label get"
            onClick={[Function]}
          >
            GET
          </div>
        </td>
        <td
          className="path"
        >
          /path
        </td>
        <td
          className="direction"
        >
          direction
        </td>
      </tr>
      <tr
        className="clickable"
        onClick={[Function]}
      >
        <td
          className="direction-icon"
        >
          <i
            aria-hidden="true"
            className="icon"
            title="http.tracelog.downstream - direction"
          />
        </td>
        <td
          className="method"
        >
          <div
            className="ui horizontal label post"
            onClick={[Function]}
          >
            POST
          </div>
        </td>
        <td
          className="path"
        >
          /path2
        </td>
        <td
          className="direction"
        >
          direction
        </td>
      </tr>
      <tr
        className="clickable"
        onClick={[Function]}
      >
        <td
          className="direction-icon"
        >
          <i
            aria-hidden="true"
            className="icon"
            title="http.tracelog.downstream - direction"
          />
        </td>
        <td
          className="method"
        >
          <div
            className="ui horizontal label post"
            onClick={[Function]}
          >
            POST
          </div>
        </td>
        <td
          className="path"
        >
          /path3
        </td>
        <td
          className="direction"
        >
          direction
        </td>
      </tr>
      <tr
        className="clickable"
        onClick={[Function]}
      >
        <td
          className="direction-icon"
        >
          <i
            aria-hidden="true"
            className="icon"
            title="http.tracelog.downstream - direction"
          />
        </td>
        <td
          className="method"
        >
          <div
            className="ui horizontal label post"
            onClick={[Function]}
          >
            POST
          </div>
        </td>
        <td
          className="path"
        >
          /path4
        </td>
        <td
          className="direction"
        >
          direction
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots trace logs Trace Logs toolbar and component 1`] = `
<div>
  <div>
    <div
      className="logs-console-toolbar"
    >
      <div
        className="ui inverted menu"
      >
        <a
          className="item"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="ban icon"
          />
        </a>
        <div
          aria-expanded={false}
          className="ui item dropdown filter-logger pull-right"
          inverted={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <div
            aria-live="polite"
            className="text"
            role="alert"
          >
            Logger: all
          </div>
          <i
            aria-hidden="true"
            className="dropdown icon"
            onClick={[Function]}
          />
          <div
            className="menu transition"
          >
            <div
              aria-checked={true}
              aria-selected={true}
              className="active selected item"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <span
                className="text"
              >
                All
              </span>
            </div>
            <div
              aria-checked={false}
              aria-selected={false}
              className="item"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <span
                className="text"
              >
                http.tracelog.downstream
              </span>
            </div>
          </div>
        </div>
        <div
          aria-expanded={false}
          className="ui item dropdown filter-message.direction pull-right"
          inverted={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <div
            aria-live="polite"
            className="text"
            role="alert"
          >
            Inbound/Outbound: all
          </div>
          <i
            aria-hidden="true"
            className="dropdown icon"
            onClick={[Function]}
          />
          <div
            className="menu transition"
          >
            <div
              aria-checked={true}
              aria-selected={true}
              className="active selected item"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <span
                className="text"
              >
                All
              </span>
            </div>
            <div
              aria-checked={false}
              aria-selected={false}
              className="item"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <span
                className="text"
              >
                
              </span>
            </div>
          </div>
        </div>
        <div
          aria-expanded={false}
          className="ui item dropdown filter-message.httpMethod pull-right"
          inverted={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <div
            aria-live="polite"
            className="text"
            role="alert"
          >
            Method: all
          </div>
          <i
            aria-hidden="true"
            className="dropdown icon"
            onClick={[Function]}
          />
          <div
            className="menu transition"
          >
            <div
              aria-checked={true}
              aria-selected={true}
              className="active selected item"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <span
                className="text"
              >
                All
              </span>
            </div>
            <div
              aria-checked={false}
              aria-selected={false}
              className="item"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <span
                className="text"
              >
                
              </span>
            </div>
          </div>
        </div>
        <div
          aria-expanded={false}
          className="ui item dropdown filter-message.id pull-right"
          inverted={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <div
            aria-live="polite"
            className="text"
            role="alert"
          >
            Activity Id: all
          </div>
          <i
            aria-hidden="true"
            className="dropdown icon"
            onClick={[Function]}
          />
          <div
            className="menu transition"
          >
            <div
              aria-checked={true}
              aria-selected={true}
              className="active selected item"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <span
                className="text"
              >
                All
              </span>
            </div>
            <div
              aria-checked={false}
              aria-selected={false}
              className="item"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <span
                className="text"
              >
                0xdb0d6c88
              </span>
            </div>
          </div>
        </div>
        <div
          aria-expanded={false}
          className="ui item dropdown filter-message.path pull-right"
          inverted={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <div
            aria-live="polite"
            className="text"
            role="alert"
          >
            Path: all
          </div>
          <i
            aria-hidden="true"
            className="dropdown icon"
            onClick={[Function]}
          />
          <div
            className="menu transition"
          >
            <div
              aria-checked={true}
              aria-selected={true}
              className="active selected item"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <span
                className="text"
              >
                All
              </span>
            </div>
            <div
              aria-checked={false}
              aria-selected={false}
              className="item"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <span
                className="text"
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      id="logs-console"
    >
      <table
        className="ui celled inverted striped unstackable compact table"
      >
        <thead
          className=""
        >
          <tr
            className=""
          >
            <th
              className=""
            />
            <th
              className="method"
            >
              Method
            </th>
            <th
              className=""
            >
              Path
            </th>
            <th
              className=""
            >
              Direction
            </th>
          </tr>
        </thead>
        <tbody
          className=""
        >
          <tr
            className="clickable"
            onClick={[Function]}
          >
            <td
              className="direction-icon"
            >
              <i
                aria-hidden="true"
                className="icon"
                title="http.tracelog.downstream - "
              />
            </td>
            <td
              className="method"
            >
              
            </td>
            <td
              className="path"
            >
              
            </td>
            <td
              className="direction"
            >
              
            </td>
          </tr>
          <tr
            className="clickable"
            onClick={[Function]}
          >
            <td
              className="direction-icon"
            >
              <i
                aria-hidden="true"
                className="icon"
                title="http.tracelog.downstream - "
              />
            </td>
            <td
              className="method"
            >
              
            </td>
            <td
              className="path"
            >
              
            </td>
            <td
              className="direction"
            >
              
            </td>
          </tr>
          <tr
            className="clickable"
            onClick={[Function]}
          >
            <td
              className="direction-icon"
            >
              <i
                aria-hidden="true"
                className="icon"
                title="http.tracelog.downstream - "
              />
            </td>
            <td
              className="method"
            >
              
            </td>
            <td
              className="path"
            >
              
            </td>
            <td
              className="direction"
            >
              
            </td>
          </tr>
          <tr
            className="clickable"
            onClick={[Function]}
          >
            <td
              className="direction-icon"
            >
              <i
                aria-hidden="true"
                className="icon"
                title="http.tracelog.downstream - "
              />
            </td>
            <td
              className="method"
            >
              
            </td>
            <td
              className="path"
            >
              
            </td>
            <td
              className="direction"
            >
              
            </td>
          </tr>
          <tr
            className="clickable"
            onClick={[Function]}
          >
            <td
              className="direction-icon"
            >
              <i
                aria-hidden="true"
                className="icon"
                title="http.tracelog.downstream - "
              />
            </td>
            <td
              className="method"
            >
              
            </td>
            <td
              className="path"
            >
              
            </td>
            <td
              className="direction"
            >
              
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
